kubernetes-base-part-2/dockerize/manifest/manifest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "otus-homework"
  labels:
    name: "otus-homework"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-homework
  namespace: otus-homework
spec:
  selector:
    matchLabels:
      app: arch-homework
  replicas: 2
  template:
    metadata:
      labels:
        app: arch-homework
    spec:
      dnsPolicy: Default
      containers:
        - name: arch-homework
          image: vaomaohao/kubernetes-base-part-2:final
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 20
          resources:
            limits:
              memory: "1024Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: arch-homework
  namespace: otus-homework
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: arch-homework
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arch-homework-ingress
  namespace: otus-homework
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: arch-homework
                port:
                  number: 80
          - pathType: Prefix
            path: "/otusapp/kirill/(.*)"
            backend:
              service:
                name: arch-homework
                port:
                  number: 80
